force-app/main/default/objects/Runner__c/Runner__c.object-meta.xml
<CustomObject>
    <description>This gives a list of the runners attached to this app.</description>
    <label>Runner</label>
    <nameField>
        <label>Runner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Runners</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>