force-app/main/default/objects/Runner__c/fields/Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Birthdate__c</fullName>
    <description>This is the runner&apos;s birthdate. This calculates the runner&apos;s age.</description>
    <label>Birthdate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>