force-app/main/default/objects/Runner__c/fields/Completed_Runs__c.field-meta.xml
<CustomField>
    <fullName>Completed_Runs__c</fullName>
    <description>This shows how many total runs this runner has completed.</description>
    <label>Completed Runs</label>
    <summaryForeignKey>Runs__c.Runner_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>