force-app/main/default/objects/Runner__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Age__c</columns>
    <columns>Completed_Runs__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>